--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
 OPENAI_MODEL_ENGINE = 'gpt-3.5-turbo-instruct'
 SYSTEM_MESSAGE = 'You are a helpful assistant.'
-TINDER_TOKEN = 'a64322d7-a6c6-4b04-8def-2295577fe70d'
+TINDER_TOKEN = 'ce9a16e9-ceca-48a1-95e2-46472771108d'
 TELEGRAM_TOKEN = '6576763674:AAErBx0vyCOaR4jipA_Zcu0RK2Ddhe5JYRY'  # Replace with the token you got from BotFather
 MY_TINDER_ID = '60884930172caa010032fcbd'
 OPENAPI_ENDPOINT = "https://api.openai.com/v1/chat/completions"
 N_ALTERNATIVES = 10
+OPENAPI_KEY =  "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"
